SUFFIXES =

SUBDIRS							= 

AM_CPPFLAGS						= 	

EXTRA_DIST 						= 

bins						= $(top_builddir)/bin

### bedasm.exe ###
bin_PROGRAMS                = $(bins)/ntpccomm

__bins__ntpccomm_SOURCES	=									\
								main.cpp						\
								CommHandler.cpp					\
								Log.cpp							\
								Logger.cpp						\
								SerialComm.cpp					\
																\
								CommHandler.h					\
								Log.h							\
								Logger.h						\
								SerialComm.h					\
								SerialComm.hpp					
								

__bins__ntpccomm_LDFLAGS		= 
__bins__ntpccomm_LDADD			= 
__bins__ntpccomm_DEPENDENCIES	= 
							
CLEANFILES					= 

